--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
     <div id="carouselExampleControls" class="carousel slide position-relative" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/assets/pics/pic2.jpeg" class="d-block w-100" alt="..." />
+          <img src="/assets/pics/pic2.jpeg" class="d-block w-100 imageSize" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="/assets/pics/pic3.jpeg" class="d-block w-100" alt="..." />
+          <img src="/assets/pics/pic3.jpeg" class="d-block w-100 imageSize" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="/assets/pics/pic5.jpeg" class="d-block w-100" alt="..." />
+          <img src="/assets/pics/pic5.jpeg" class="d-block w-100 imageSize" alt="..." />
         </div>
       </div>
       <div class="container position-absolute top-50 start-50 translate-middle midText">
